--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.php": "php",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "stats.h": "c"
     }
 }
